--- a/JSDispatcher/Base.lproj/Main.storyboard
+++ b/JSDispatcher/Base.lproj/Main.storyboard
@@ -650,7 +650,7 @@
         <scene sceneID="R2V-B0-nI4">
             <objects>
                 <windowController id="B8D-0N-5wS" sceneMemberID="viewController">
-                    <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
+                    <window key="window" title="ODU CS471 - SimDispatcher" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                         <rect key="contentRect" x="196" y="240" width="480" height="270"/>
@@ -664,25 +664,16 @@
             </objects>
             <point key="canvasLocation" x="75" y="250"/>
         </scene>
-        <!--View Controller-->
+        <!--ODU CS471 - SimDispatcher-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="JSDispatcher" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="ODU CS471 - SimDispatcher" id="XfG-lQ-9wD" customClass="ViewController" customModule="JSDispatcher" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="722" height="448"/>
+                        <rect key="frame" x="0.0" y="0.0" width="722" height="404"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mN5-CC-WJ8">
-                                <rect key="frame" x="96" y="20" width="608" height="59"/>
-                                <animations/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="JSDispatcher" id="PrR-dZ-nXr">
-                                    <font key="font" size="50" name=".HelveticaNeueDeskInterface-Regular"/>
-                                    <color key="textColor" name="highlightColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
                             <scrollView autohidesScrollers="YES" horizontalLineScroll="23" horizontalPageScroll="10" verticalLineScroll="23" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dl0-Tt-MQq">
-                                <rect key="frame" x="20" y="164" width="682" height="264"/>
+                                <rect key="frame" x="20" y="120" width="682" height="264"/>
                                 <clipView key="contentView" id="oKC-W1-Vr6">
                                     <rect key="frame" x="1" y="0.0" width="680" height="263"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -766,7 +757,7 @@
                                                         </tableCellView>
                                                     </prototypeCellViews>
                                                 </tableColumn>
-                                                <tableColumn identifier="Status" width="100" minWidth="40" maxWidth="1000" id="STN-xu-boP">
+                                                <tableColumn identifier="Priority" width="100" minWidth="40" maxWidth="1000" id="STN-xu-boP">
                                                     <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="Priority">
                                                         <font key="font" metaFont="smallSystem"/>
                                                         <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -820,18 +811,15 @@
                                                             <rect key="frame" x="269" y="1" width="512" height="22"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
-                                                                <segmentedControl verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3eA-Js-wf2">
-                                                                    <rect key="frame" x="22" y="1" width="173" height="24"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="width" constant="169" id="AMy-kR-lJa"/>
-                                                                    </constraints>
+                                                                <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3eA-Js-wf2">
+                                                                    <rect key="frame" x="88" y="-1" width="230" height="24"/>
                                                                     <animations/>
                                                                     <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="selectOne" id="vgC-rS-KTL">
                                                                         <font key="font" metaFont="system"/>
                                                                         <segments>
-                                                                            <segment label="Ready" width="55"/>
-                                                                            <segment label="Block" width="55" selected="YES" tag="1"/>
-                                                                            <segment label="Kill" width="55"/>
+                                                                            <segment label="Ready" width="74"/>
+                                                                            <segment label="Block" width="74" selected="YES" tag="1"/>
+                                                                            <segment label="Kill" width="74"/>
                                                                         </segments>
                                                                     </segmentedCell>
                                                                     <connections>
@@ -840,8 +828,8 @@
                                                                 </segmentedControl>
                                                             </subviews>
                                                             <constraints>
-                                                                <constraint firstItem="3eA-Js-wf2" firstAttribute="centerY" secondItem="Pxs-vb-yKU" secondAttribute="centerY" id="2Au-oN-6io"/>
-                                                                <constraint firstItem="3eA-Js-wf2" firstAttribute="centerX" secondItem="Pxs-vb-yKU" secondAttribute="centerX" id="YH8-6X-m1t"/>
+                                                                <constraint firstItem="3eA-Js-wf2" firstAttribute="centerY" secondItem="Pxs-vb-yKU" secondAttribute="centerY" id="o7K-9R-QLA"/>
+                                                                <constraint firstItem="3eA-Js-wf2" firstAttribute="leading" secondItem="Pxs-vb-yKU" secondAttribute="leading" constant="90" id="zkR-ik-5TL"/>
                                                             </constraints>
                                                             <animations/>
                                                             <connections>
@@ -881,7 +869,7 @@
                                 </tableHeaderView>
                             </scrollView>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="rgU-D6-hzV">
-                                <rect key="frame" x="20" y="130" width="25" height="27"/>
+                                <rect key="frame" x="20" y="86" width="25" height="27"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="Iu4-3Q-saY"/>
                                     <constraint firstAttribute="width" constant="25" id="wO0-92-lnh"/>
@@ -891,9 +879,12 @@
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
+                                <connections>
+                                    <action selector="newProcess:" target="XfG-lQ-9wD" id="VWH-hE-eJM"/>
+                                </connections>
                             </button>
                             <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="lDe-ZM-jd7">
-                                <rect key="frame" x="53" y="131" width="135" height="25"/>
+                                <rect key="frame" x="53" y="87" width="135" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="4CN-6f-6xe"/>
                                     <constraint firstAttribute="width" constant="135" id="mPP-sV-WtW"/>
@@ -905,27 +896,84 @@
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
+                            <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="t2i-0I-Qlu">
+                                <rect key="frame" x="196" y="97" width="506" height="5"/>
+                                <animations/>
+                                <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
+                                <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <font key="titleFont" metaFont="system"/>
+                            </box>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="mN5-CC-WJ8">
+                                <rect key="frame" x="194" y="19" width="510" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="as5-HZ-B58"/>
+                                </constraints>
+                                <animations/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="SimDispatcher" id="PrR-dZ-nXr">
+                                    <font key="font" size="50" name=".HelveticaNeueDeskInterface-Regular"/>
+                                    <color key="textColor" name="controlShadowColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Kx8-hv-BJ0">
+                                <rect key="frame" x="14" y="45" width="180" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="168" id="MOG-XO-s1j"/>
+                                </constraints>
+                                <animations/>
+                                <buttonCell key="cell" type="push" title="Reset" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="GW5-62-BvF">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="reset:" target="XfG-lQ-9wD" id="7w0-n0-fiJ"/>
+                                </connections>
+                            </button>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="9k7-Kf-e5m">
+                                <rect key="frame" x="14" y="12" width="180" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="168" id="dOR-5I-iPW"/>
+                                </constraints>
+                                <animations/>
+                                <buttonCell key="cell" type="push" title="Kill All" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="P9x-bx-sCo">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="killAll:" target="XfG-lQ-9wD" id="fh8-EY-Ku8"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <constraints>
+                            <constraint firstItem="9k7-Kf-e5m" firstAttribute="leading" secondItem="Kx8-hv-BJ0" secondAttribute="leading" id="1ED-oR-feL"/>
+                            <constraint firstItem="mN5-CC-WJ8" firstAttribute="top" secondItem="t2i-0I-Qlu" secondAttribute="bottom" constant="20" id="7fY-4w-gQB"/>
+                            <constraint firstItem="t2i-0I-Qlu" firstAttribute="top" secondItem="dl0-Tt-MQq" secondAttribute="bottom" constant="20" id="BXA-cm-MpK"/>
+                            <constraint firstItem="mN5-CC-WJ8" firstAttribute="leading" secondItem="Kx8-hv-BJ0" secondAttribute="trailing" constant="8" id="FWn-w9-NUv"/>
+                            <constraint firstAttribute="trailing" secondItem="t2i-0I-Qlu" secondAttribute="trailing" constant="20" id="Hil-zg-OvP"/>
+                            <constraint firstItem="9k7-Kf-e5m" firstAttribute="top" secondItem="Kx8-hv-BJ0" secondAttribute="bottom" constant="12" id="MtR-TH-jf5"/>
                             <constraint firstAttribute="trailing" secondItem="dl0-Tt-MQq" secondAttribute="trailing" constant="20" id="OBU-9X-9Lx"/>
-                            <constraint firstAttribute="bottom" secondItem="mN5-CC-WJ8" secondAttribute="bottom" constant="20" id="Oxv-rF-C6d"/>
+                            <constraint firstItem="t2i-0I-Qlu" firstAttribute="leading" secondItem="lDe-ZM-jd7" secondAttribute="trailing" constant="8" id="SMH-DG-IJk"/>
                             <constraint firstItem="dl0-Tt-MQq" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="20" id="UDE-kk-SIJ"/>
                             <constraint firstItem="rgU-D6-hzV" firstAttribute="top" secondItem="dl0-Tt-MQq" secondAttribute="bottom" constant="8" id="ay7-JT-dPJ"/>
+                            <constraint firstAttribute="bottom" secondItem="mN5-CC-WJ8" secondAttribute="bottom" constant="19" id="fw0-YB-bCC"/>
                             <constraint firstItem="lDe-ZM-jd7" firstAttribute="top" secondItem="dl0-Tt-MQq" secondAttribute="bottom" constant="8" id="h0i-fI-90l"/>
                             <constraint firstAttribute="trailing" secondItem="mN5-CC-WJ8" secondAttribute="trailing" constant="20" id="koN-Jg-aUE"/>
+                            <constraint firstItem="Kx8-hv-BJ0" firstAttribute="leading" secondItem="rgU-D6-hzV" secondAttribute="leading" id="mdi-1P-0iG"/>
                             <constraint firstItem="rgU-D6-hzV" firstAttribute="leading" secondItem="dl0-Tt-MQq" secondAttribute="leading" id="qYv-1H-5lK"/>
+                            <constraint firstItem="Kx8-hv-BJ0" firstAttribute="top" secondItem="lDe-ZM-jd7" secondAttribute="bottom" constant="14" id="w2M-Qz-K6w"/>
                             <constraint firstItem="dl0-Tt-MQq" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="20" id="zKg-kG-ym2"/>
                             <constraint firstItem="lDe-ZM-jd7" firstAttribute="leading" secondItem="rgU-D6-hzV" secondAttribute="trailing" constant="8" id="zaa-bP-rfD"/>
                         </constraints>
                         <animations/>
                     </view>
                     <connections>
+                        <outlet property="newProcessPriority" destination="lDe-ZM-jd7" id="L7a-qn-FFp"/>
                         <outlet property="processTableView" destination="Ngn-xe-OO5" id="4r2-si-Gcd"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="365" y="853"/>
+            <point key="canvasLocation" x="365" y="831"/>
         </scene>
     </scenes>
     <resources>
